# Digit_Recognition

./: .gitignore  CMakeLists.txt  C_Number_Recognition.vcxitems  Digit_Recognition.sln  Digit_Recognition.vcxproj  Digit_Recognition.vcxproj.filters
data/: model.cnn
src/: draw.c  draw.h  nn.c  nn.h  predict.c  train.c
